saves/test/demo_full_20240802_193545/circuit7/debug_1/run_info.txt
iverilog simulation failed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp circuit7_tb.v circuit7.v 
iverilog cmd 1 output:

iverilog cmd 1 error:
circuit7_tb.v:28: syntax error
circuit7_tb.v:28: error: Malformed statement

